tests/neg/i12049b/B_2.scala

val y1: String = foo  // error
